--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,18 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
-
 %table#movies
   %thead
     %tr
-      %th= link_to "Movie Title", movies_path(:sort_by => "title", :id => "title_header")
+      = form_tag movies_path, :method => :get do
+        Include: 
+        - @all_ratings.each do |rating|
+          = rating
+          = check_box_tag "ratings[#{rating}]", 1, @box_checado[rating]
+        = submit_tag 'Refresh'
+    %tr
+      %th= link_to "Movie Title", movies_path(:sort_by=> "title", :id=> "title_header")
       %th Rating
-      %th= link_to "Release Date", movies_path(:sort_by => "release_date", :id => "release_date_header")
+      %th= link_to "Release Date", movies_path(:sort_by=> "release_date", :id=> "release_date_header")
       %th More Info
   %tbody
     - @movies.each do |movie|
